@@ -1,12 +1,7 @@
 {
-  "count": 20,
+  "count": 17,
   "uniques": 7,
   "views": [
-    {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 1,
@@ -25,6 +20,11 @@
     {
       "timestamp": "2022-05-27T00:00:00Z",
       "count": 8,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
